---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: ????
  Info:
    - Payout every 1000 items
    - So apparently modules do not draw on small selection boxes
    - Tinker with the alt mode drawing
    - Cleanup 〃
    - Turn the assembling machine into a furnace
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024. 10. 18
  Info:
    - Prepare awesome shop and sink graphics
    - Setup the entity and item prototypes
    - Prepare tooling needed for the custom surface
    - Tweak linked chest prototype
    - Setup the control circuitry for every surface
    - Rework entities on the hidden surface to make room for multiple forces
    - Create the arithmatic and linked belt on the mod surface
    - Create the belt, loader & infinity chest
    - Remove right side stuff when the linked belt vanishes
    - Handle surface deletion
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 10. 18
  Info:
    - Initial commit