@@ -7,6 +7,7 @@ Date: ????
     - Tinker with the alt mode drawing
     - Cleanup 〃
     - Turn the assembling machine into a furnace
+    - Check for flipped
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.2
 Date: 2024. 10. 18
